--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>Chạy thử server</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -36,8 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>beauty1993</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<p>Chạy thử server không database,không react.js chỉ có nodejs expressjs html và css thuần,phần frontend lấy tại  website này <a href="https://templated.co/">TEMPLATED</a></p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
