--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
 <body>
     <!-- header -->
     <header class="header" id="home">
+      <video src="./asset/trailler.mp4" autoplay loop playsinline muted></video>
+      <div class="viewport-header">
         <!-- navbar -->
         <nav class="navbar container">
             <a href="index.html" class="navbar__brand">
@@ -77,14 +79,15 @@
         <!-- header banner -->
         <div class="header-banner container">
             <div class="header-banner__box">
-                <h3 class="header-banner__subtitle">Sữa tắm petwish</h3>
+                <h3 class="header-banner__subtitle">Sony WH-1000xM4</h3>
                 <h1 class="header-banner__title">
-                    Vài dòng mô tả sản phẩm vào đây
+                    wireless noise canceling headphones
                 </h1>
-                <button type="button" class="button__trans">link mua</button>
+                <button type="button" class="button__trans">order now</button>
             </div>
         </div>
         <!-- end of header banner -->
+      </div>
     </header>
     <!-- end of header -->
 
@@ -98,7 +101,7 @@
               <i class="fas fa-volume-up fa-fw"></i>
             </span>
                     <h2 class="feature__item__title">
-                        chưa biết viết gì nên cứ để tiếng anh
+                        Industry-leading noise cancellation
                     </h2>
                     <p class="text">
                         Industry-leading noise cancellation technology means you hear every word, note, and tune with incredible clarity, no matter your environment. These noise canceling headphones feature additional microphones that assist in isolating sound for a reduction
