--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,13 @@
             <div class="navbar__collapse">
                 <ul class="__nav">
                     <li class="nav__item">
-                        <a href="#home" class="__link">home</a>
+                        <a href="#home" class="__link">Trang chủ</a>
                     </li>
                     <li class="nav__item">
                         <a href="#features" class="__link">features</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#product" class="__link">product</a>
+                        <a href="#product" class="__link">Sản phẩm</a>
                     </li>
                     <li class="nav__item">
                         <a href="#reviews" class="__link">reviews</a>
@@ -79,11 +79,11 @@
         <!-- header banner -->
         <div class="header-banner container">
             <div class="header-banner__box">
-                <h3 class="header-banner__subtitle">Sony WH-1000xM4</h3>
+                <h3 class="header-banner__subtitle">Petwish</h3>
                 <h1 class="header-banner__title">
-                    wireless noise canceling headphones
+                    Sữa tắm chó mèo petwish
                 </h1>
-                <button type="button" class="button__trans">order now</button>
+                <button type="button" class="button__trans">Mua ngay</button>
             </div>
         </div>
         <!-- end of header banner -->
