--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <title>Jena shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style/css/main.css" />
-    <!-- <script src="script/main.js" defer></script>
-    <title>E-commerce shop</title> -->
+    <script src="script/main.js" defer></script>
+    <title>Jena shop</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
                         <a href="#home" class="__link">Trang chủ</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#features" class="__link">Về thương hiệu</a>
+                        <a href="https://shopee.com.my/shop/6784512/search" class="__link">Shopee</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#product" class="__link">Sản phẩm</a>
+                        <a href="https://www.facebook.com/Jena-Shop-113769910807491" class="__link">Facebook</a>
                     </li>
                     <li class="nav__item">
                         <a href="#reviews" class="__link">Chúng tôi là ai</a>
@@ -68,8 +68,9 @@
                 <h3 class="header-banner__subtitle">Jena shop</h3>
                 <h1 class="header-banner__title">
                     Sữa tắm chó mèo petwish
-                </h1>
+                </h1><a href="https://shopee.com.my/shop/6784512/search">
                 <button type="button" class="button__trans">Mua ngay</button>
+            </a>
             </div>
         </div>
         <!-- end of header banner -->
@@ -110,11 +111,10 @@
                 <!-- item -->
                 <div class="feature__item">
                     <h2 class="feature__item__title">
-                        Wireless freedom, premium sound
+                        cam kết từ Petwish
                     </h2>
                     <p class="text">
-                        LDCA transmits approximately three times more data (at the maximum transfer rate of 990 kbps) than conventional BLUETOOTH® audio, allowing you to enjoy High-Resolution Audio content in exceptional quality, as close as possible to that of a dedicated wired
-                        connection.
+                        Sữa tắm cho chó cưng Pet wish xuất phát từ sự khắt khe và trách nhiệm về sự hoàn hảo, chúng tôi sẽ tiếp tục tạo ra những sản phẩm chất lượng cao dành cho thú cưng bằng cả trái tim và sự chăm sóc cho sự phát triển khỏe mạnh của từng chú chó cưng bằng những sản phẩm tận tâm, tỉ mỉ và đảm bảo!
                     </p>
                 </div>
                 <!-- end of item -->
