--- a/public/bigDog.html
+++ b/public/bigDog.html
@@ -75,181 +75,190 @@
         <!-- end of header banner -->
     </header>
     <!-- end of header -->
-  
+    <!-- product-home -->
+    <section class="product-home">
+        <div class="container">
+          <ul>
+              <li class="product__list"><a class="product__link" href="./smallDog.html#product">Sản phẩm cho chó nhỏ</a></li>
+              <li class="product__list"><a class="product__link" href="./mediumDog.html#product">Sản phẩm cho chó vừa</a></li>
+              <li class="product__list"><a class="product__link" href="./bigDog.html#product">Sản phẩm cho chó lớn</a></li>
+          </ul>  
+        </div>
+    </section>
+    <!-- product-home end -->
     <!-- product section -->
     <section class="product" id="product">
         <div class="container">
             <div class="product-wrapper">
                 <!-- cho nho -->
-                <h2 class="product__title">Sữa tắm dành cho chó nhỏ</h2>
-                 <!-- group 4 -->
+                <h2 class="product__title">Sữa tắm dành cho chó to</h2>
+                <!-- group 4 -->
                 <div class="product__item-wrapper">
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Alaska/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm Alaska Malamute.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/9839447760/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Beige Labrador/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm Beige Labrador.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/8639450843/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm chăn nuôi của Đức/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm dành cho chó chăn cừu Đức( BERGER/BÉC GIÊ ĐỨC).Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/9739456165/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm cho chó Akita/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm cho chó Akita.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/9339456575/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                 </div>
-                 <!-- group 4 end off -->
-                 <!-- group 4 -->
+                <!-- cho nho end of -->
+                <!-- group 4 -->
                 <div class="product__item-wrapper">
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm đặc biệt của Cathro/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đặc biệt dành cho giống chó Ngao Ý ( CANE CORSO).Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/9239454242/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm đặc biệt của Doberman/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đặc biệt dành cho chó Doberman.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/4585148517/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm gấu trắng/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đăc biệt dành riêng cho chó chăn cừu pháp(hay còn gọi là chó Great Pyrenees,hay chó núi pyrenees)
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/8039453422/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Golden Retriever/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đặc biệt dành chó Golden Retriever.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/8539446669/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                 </div>
-                 <!-- group 4 end off -->
-                 <!-- group 4 -->
+                <!-- cho nho end of -->
+                <!-- group 4 -->
                 <div class="product__item-wrapper">
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Gumu/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đặc biệt dành cho giống chó chăn cừu Anh cổ đại (chó đuôi cộc)
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/5085149094/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Labrador đen/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm đặc biệt dành cho chó Labrador đen.Dầu gội cho chó PETWISH
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/9039450976/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Labrador nâu sô cô la/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm dành cho chó Labrador.Sữa tắm Labrador sôcôla nâu.sữa tắm petwish
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/3685244789/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                     <div class="product__item">
-                        <img src="./asset/petwish2.jpg" alt="product" class="product__item__img" />
+                        <img src="./asset/cho to/Sữa tắm Su Mu/img2.jpg" alt="product" class="product__item__img" />
                         <div class="product__info">
                             <p class="text">
-                                Dầu gội tùy chỉnh Pomeranian màu vàng.Dầu gội cho chó PETWISH
+                                Sữa tắm Rough Collie dành cho chó Collie đặc biệt khử trùng, khử mùi và chống ngứa cho chó Collie lông dài
                             </p>
-                            <h4 class="title">giá bán: 250.000 vnđ</h4>
+                            <h4 class="title">giá bán: 350.000 vnđ</h4>
                         </div>
                         <button type="button" class="button__product">mới</button>
-                        <a href="https://shopee.com.my/White-Pomeranian-customization-shampoo-%F0%9F%98%BB-PETWISH-Dog-Shampoo-%F0%9F%98%BB-Dog-shower-gel-i.6784512.4442677772">
-                            <button type="button" class="button__product-add"> mua ngay
+                        <a href="https://shopee.vn/product/418204200/6485147299/" target="_blank">
+                            <button type="button" class="button__product-add"> chi tiết
                             </button> </a>
                     </div>
                 </div>
-                 <!-- group 4 end off -->
                 <!-- cho nho end of -->
             </div>
         </div>
