--- a/public/mediumDog.html
+++ b/public/mediumDog.html
@@ -75,6 +75,17 @@
         <!-- end of header banner -->
     </header>
     <!-- end of header -->
+    <!-- product-home -->
+    <section class="product-home">
+        <div class="container">
+            <ul>
+                <li class="product__list"><a class="product__link" href="./smallDog.html#product">Sản phẩm cho chó nhỏ</a></li>
+                <li class="product__list"><a class="product__link" href="./mediumDog.html#product">Sản phẩm cho chó vừa</a></li>
+                <li class="product__list"><a class="product__link" href="./bigDog.html#product">Sản phẩm cho chó lớn</a></li>
+            </ul>
+        </div>
+    </section>
+    <!-- product-home end -->
     <!-- product section -->
     <section class="product" id="product">
         <div class="container">
